--- a/style.css
+++ b/style.css
@@ -7,8 +7,16 @@
     --font:"Nunito sans",sans-serif;
 }
 
-  body(
+  body{
     background-color:var(--bg-color);
-    color-var(--primary-color);
-    font-femily:var(--font);
-  )
+    color:var(--primary-color);
+    font-family:var(--font);
+    height: 100vh;
+    margin: 0;
+  }
+
+  header{
+    background-color: var(--primary-color);
+  }
+
+  
