--- a/style.css
+++ b/style.css
@@ -17,6 +17,13 @@
 
   header{
     background-color: var(--primary-color);
+    text-align: center;
+  } 
+
+  h1{
+    font-size: 2rem;
+    color:var(--bg-color);
+    font-weight: 700;
   }
 
   
